--- a/UI.html
+++ b/UI.html
@@ -4,6 +4,15 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Delphine Lan's portfolio, Delphine Lan is a Taiwan based multidisciplinary designer specialising in UI Design, UX Design, Graphic Design, and Digital Design." class="next-head"/>
+<meta name="keywords" content="UI Design, UX Design, Graphic Design, and Digital Design" class="next-head"/>
+<meta property="og:title" content="Portfolio: Delphine-lan">
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="Delphine-Lan">
+<meta property="og:image" content="img/KV.png">
+<link rel="icon" href="img/D_logo.png" type="image/x-icon" />
+<link rel="shortcut icon" href="img/D_logo.png" type="image/x-icon" />
+<link rel="canonical" href="index.html">
 <title>	DELPHINE LAN | PORTFOLIO</title>
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -13,52 +22,14 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg fixed-top">
-  <a class="navbar-brand" href="index.html">	<!--DELPHINE LAN | PORTFOLIO-->
-    <img src="img/D_logo.svg" width="50" height="50" alt=""/> </a>
-  <button class="hamburger hamburger--collapse" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item d_none">
-        <a class="nav-link" href="UI.html">UI/UX</a>
-      </li>
-      <li class="nav-item d_none">
-        <a class="nav-link" href="visual.html">VISUAL</a>
-      </li>
-      <li class="nav-item d_none">
-        <a class="nav-link" href="video.html">VIDEO</a>
-      </li>
-      <li class="nav-item d_none">
-        <a class="nav-link" href="index.html">ABOUT</a>
-      </li>
-      <div class="mobile_meanu">
-        <li>
-          <a class="nav-link" href="index.html">ABOUT</a>
-        </li>
-        <li>
-          <a class="nav-link" href="UI.html">UI/UX</a>
-        </li>
-        <li>
-          <a class="nav-link" href="visual.html">VISUAL</a>
-        </li>
-        <li>
-          <a class="nav-link" href="video.html">VIDEO</a>
-        </li>
-        <li class="icon_menu">
-          <a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a>
-          <a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a>
-          <a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
-      </div>
-    </ul>
-  </div>
-</nav>
+<!-- Common header-->
+<script src="js/header.js"></script>
+<!-- Common header end-->
 
 <div id="webdesign" class="container">
-  <h2 class="title top-25">UI / UX</h2>
+  <h2 class="title top-25">UI DESIGN</h2>
   <hr>
-  <p class="title_scribe bottom-70">Delphine design User Interface and User Experience products for App and Website.</p>
+  <p class="title_scribe bottom-70">Delphine design User Interface products for App and Website.</p>
   <!--pic-banner-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/ui_app_socialmedia.jpg" width="550" height="500" class="img-fluid">
@@ -67,7 +38,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media App</h5>
-            <p class="font-subdark center-text">App UI/UX design</p>
+            <p class="font-subdark center-text">App UI design</p>
           </div>
         </div>
       </a>
@@ -80,7 +51,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media Web</h5>
-            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
+            <p class="font-subdark center-text">RWD web design, UI design</p>
           </div>
         </div>
       </a>
@@ -93,7 +64,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media CMS</h5>
-            <p class="font-subdark center-text">CMS UI/UX design</p>
+            <p class="font-subdark center-text">CMS UI design</p>
           </div>
         </div>
       </a>
@@ -102,11 +73,11 @@
   <div id="pic-banner" class="col-md-4">
     <img src="img/ui_web_news.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="UI_news_Undisclosed.html" class="captiondetails">
+      <a href="UI_news.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>News Channel of Web</h5>
-            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
+            <p class="font-subdark center-text">RWD web design, UI design</p>
           </div>
         </div>
       </a>
@@ -119,7 +90,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Funds Chip</h5>
-            <p class="font-subdark center-text">UI/UX design for App & Mobile Web</p>
+            <p class="font-subdark center-text">UI design for App & Mobile Web</p>
           </div>
         </div>
       </a>
@@ -132,7 +103,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Subscription of Member</h5>
-            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
+            <p class="font-subdark center-text">RWD web design, UI design</p>
           </div>
         </div>
       </a>
@@ -158,7 +129,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Course Selection Website</h5>
-            <p class="font-subdark center-text">RWD web design, UI/UX design</p>
+            <p class="font-subdark center-text">RWD web design, UI design</p>
           </div>
         </div>
       </a>
