--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -19,54 +19,24 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand" href="index.html">	<!--DELPHINE LAN | PORTFOLIO-->
-      <img src="img/D_logo.svg" width="50" height="50" alt=""/> </a>
-    <button class="hamburger hamburger--collapse" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item d_none">
-          <a class="nav-link" href="UI.html">UI/UX</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="visual.html">VISUAL</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="video.html">VIDEO</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="index.html">ABOUT</a>
-        </li>
-        <div class="mobile_meanu">
-          <li>
-            <a class="nav-link" href="index.html">ABOUT</a>
-          </li>
-          <li>
-            <a class="nav-link" href="UI.html">UI/UX</a>
-          </li>
-          <li>
-            <a class="nav-link" href="visual.html">VISUAL</a>
-          </li>
-          <li>
-            <a class="nav-link" href="video.html">VIDEO</a>
-          </li>
-          <li class="icon_menu">
-            <a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a>
-            <a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a>
-            <a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
-        </div>
-      </ul>
-    </div>
-  </nav>
+<!-- Common header-->
+<script src="js/header.js"></script>
+<!-- Common header end-->
 
 <div id="webdesign" class="container">
     <h2 class="title top-25">Social Media App</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">UI/UX design for App.</p>
-    <img class="img-fluid w-900 bottom-70" src="img/img_Undisclosed.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
+    <p class="title_scribe w-900 bottom-25">UI design for App.</p>
+    <img class="img-fluid w-900 bottom-25" src="img/mp_app1@2x.png" alt="">
+    <p class="title_scribe w-900 bottom-25">「鉅亨號」為《Anue鉅亨網》基於 AI 大數據挖掘和推薦引擎所推出具影響力的自媒體社群平台，以投資理財為主題拓展到金融財經、房地產、汽車、數位虛擬貨幣、影音視頻及Podcast的數位生活圈。讀者可以透過一面牆及個人化功能關注一天的大小事；對創作者而言更是一個結合業界獨家編輯器、多媒體功能與1,000萬用戶的舞台。</p>
+    <img class="img-fluid w-900" src="img/mp_app3@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/mp_app4@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/mp_app5@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/mp_app6@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/mp_app7@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/mp_app8@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/mp_app9@2x.png" alt="">
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
 
 <!--page-->
