--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a class="nav-link" href="index.html">ABOUT</a>
         </li>
         <li>
-          <a class="nav-link" href="UI.html">UI/UX</a>
+          <a class="nav-link" href="UI.html">UI</a>
         </li>
         <li>
           <a class="nav-link" href="visual.html">VISUAL</a>
@@ -69,7 +69,7 @@
 <div id="KV">
   <img src="img/KV.png" width="700" height="300" class="img-kv">
   <!--<h1>WELCOME TO MY WORKSHOP</h1>-->
-  <p>Delphine Lan is a Taiwan based multidisciplinary designer specialising in UI/UX Design, Graphic Design, and Digital Design.</p><!--based multidisciplinary-->
+  <p>Delphine Lan is a Taiwan based multidisciplinary designer specialising in UI Design, Graphic Design, and Digital Design.</p><!--based multidisciplinary-->
   <ul>
     <!--<li><a href="#" target="_blank"><img src="img/social_icon_fb.png" width="100" height="100"></a></li>
     <li><a href="#" target="_blank"><img src="img/social_icon_ig.png" width="100" height="100"></a></li>-->
@@ -79,7 +79,7 @@
     <li><a href="Delphine_CV.pdf" target="_blank"><img src="img/icon_cv.svg" width="30" height="30"></a></li>
   </ul>
   <ul>
-    <li class="btn_box"><a href="UI.html">UI/UX</a></li>
+    <li class="btn_box"><a href="UI.html">UI</a></li>
     <li class="btn_box"><a href="visual.html">VISUAL</a></li>
     <li class="btn_box"><a href="video.html">VIDEO</a></li>
   </ul>
