--- a/UI_appdarkmode.html
+++ b/UI_appdarkmode.html
@@ -13,56 +13,18 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand" href="index.html">	<!--DELPHINE LAN | PORTFOLIO-->
-      <img src="img/D_logo.svg" width="50" height="50" alt=""/> </a>
-    <button class="hamburger hamburger--collapse" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item d_none">
-          <a class="nav-link" href="UI.html">UI/UX</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="visual.html">VISUAL</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="video.html">VIDEO</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="index.html">ABOUT</a>
-        </li>
-        <div class="mobile_meanu">
-          <li>
-            <a class="nav-link" href="index.html">ABOUT</a>
-          </li>
-          <li>
-            <a class="nav-link" href="UI.html">UI/UX</a>
-          </li>
-          <li>
-            <a class="nav-link" href="visual.html">VISUAL</a>
-          </li>
-          <li>
-            <a class="nav-link" href="video.html">VIDEO</a>
-          </li>
-          <li class="icon_menu">
-            <a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a>
-            <a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a>
-            <a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
-        </div>
-      </ul>
-    </div>
-  </nav>
+<!-- Common header-->
+<script src="js/header.js"></script>
+<!-- Common header end-->
 
 <div id="webdesign" class="container">
     <h2 class="title top-25">App Darkmode</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">Considering for users can read in a variety of situations, we provide dark mode.</p>
+    <p class="title_scribe w-900 bottom-25">Considering for users can read in a variety of situations, I defined the darkmode guideline of the app.</p>
     <img class="img-fluid w-900 bottom-70" src="img/ui_darkmode_pic.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/darkmode_pic2.jpg" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/darkmode_pic3.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
 
 <!--page-->
