--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -66,12 +66,12 @@
     <hr>
     <p class="title_scribe w-900 bottom-25">UI/UX design for CMS Web.</p>
     <img class="img-fluid w-900 bottom-70" src="img/img_Undisclosed.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="UI_socialmedia_web.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_news_Undisclosed.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="UI_news.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
