--- a/visual_crypto_landingpage.html
+++ b/visual_crypto_landingpage.html
@@ -24,27 +24,19 @@
 <!-- Common header end-->
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">Invesco</h2>
+    <h2 class="title top-25">Anue Crypto Landing Page</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">RWD Campaign Gage<br>
-        The entire event page is based on Van Gogh's The Starry Night.<br>
-        I designed the key visual and used html and css to complete them.</p>
-    <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
-    <img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">
-    <img class="img-fluid w-900 bottom-70" src="img/Invesco_pic5.png" alt="">
-    <p class="s_title bottom-25">Key Visual : Van Gogh's The Starry Night. </p>
-    <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic2.png" alt="">
-    <p class="s_title bottom-25">color use</p>
-    <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic3.png" alt="">
-    <p class="s_title bottom-25">text color use</p>
-    <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic4.png" alt="">
-    <p>Copyright © Invesco</p>
+    <p class="title_scribe w-900 bottom-25">RWD landing page</p>
+    <a class="bottom-25" href="https://campaign.cnyes.com/topics/anuecrypto/" target="blank">link to web →</a>
+    <img class="img-fluid w-900" src="img/crypto_landingpage1@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/crypto_landingpage2@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/crypto_landingpage3@2x.png" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="visual_crypto_landingpage.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="visual_iroo.html">Next <img src="img/arr_right.png"></a>
+<!--<a class="line-arrow left font-darkgray" href="visual_crypto_landingpage.html"><img src="img/arr_left.png"> Previous</a>-->
+<a class="line-arrow right font-darkgray" href="visual_Invesco.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
