--- a/visual_Delphine.html
+++ b/visual_Delphine.html
@@ -24,17 +24,20 @@
 <!-- Common header end-->
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">iRoo</h2>
+    <h2 class="title top-25">Delphine</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">In 2019, I was approached by iRoo to create a package of digital marketing design templates, which included website and social content assets. iRoo is a contemporary ready-to-wear label based in Taiwan. Its elegant design detail has made its way onto various luxury online retail websites and Physical storefronts.</p>
-    <img class="img-fluid w-900 bottom-70" src="img/iroo.png" alt="">
-    <p>Copyright © iRoo</p>
+    <p class="title_scribe w-900 bottom-25">Logo and signature desighn.</p>
+    <img class="img-fluid w-900 bottom-25" src="img/Delphine1@2x.png" alt="">
+    <p class="title_scribe w-800 bottom-25" style="text-align: left;">My English name is Delphine. I took this name because I like dolphins very much. This name is derived from French and sounds similar to Dolphin. It is also said that it comes from dolphins.
+
+        <br>I designed this logo because I wanted to have my own signature. My original idea is to combine Delphine and dolphin, so I merged the letter D into a dolphin element.</p>
+    <img class="img-fluid w-900 bottom-70" src="img/Delphine2@2x.png" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="visual_Delphine.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="visual_amcedm.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow left font-darkgray" href="visual_Invesco.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow right font-darkgray" href="visual_iroo.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
