--- a/visual.html
+++ b/visual.html
@@ -13,47 +13,9 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg fixed-top">
-  <a class="navbar-brand" href="index.html">	<!--DELPHINE LAN | PORTFOLIO-->
-    <img src="img/D_logo.svg" width="50" height="50" alt=""/> </a>
-  <button class="hamburger hamburger--collapse" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item d_none">
-        <a class="nav-link" href="UI.html">UI/UX</a>
-      </li>
-      <li class="nav-item d_none">
-        <a class="nav-link" href="visual.html">VISUAL</a>
-      </li>
-      <li class="nav-item d_none">
-        <a class="nav-link" href="video.html">VIDEO</a>
-      </li>
-      <li class="nav-item d_none">
-        <a class="nav-link" href="index.html">ABOUT</a>
-      </li>
-      <div class="mobile_meanu">
-        <li>
-          <a class="nav-link" href="index.html">ABOUT</a>
-        </li>
-        <li>
-          <a class="nav-link" href="UI.html">UI/UX</a>
-        </li>
-        <li>
-          <a class="nav-link" href="visual.html">VISUAL</a>
-        </li>
-        <li>
-          <a class="nav-link" href="video.html">VIDEO</a>
-        </li>
-        <li class="icon_menu">
-          <a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a>
-          <a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a>
-          <a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
-      </div>
-    </ul>
-  </div>
-</nav>
+<!-- Common header-->
+<script src="js/header.js"></script>
+<!-- Common header end-->
 
 <div id="webdesign" class="container">
   <h2 class="title top-25">VISUAL</h2>
@@ -81,6 +43,19 @@
           <div class="caption-text center-text">
             <h5>Invesco</h5>
             <p class="font-subdark center-text">Campaign Page</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
+    <img src="img/visual_Delphine.png" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="visual_Delphine.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>Delphine</h5>
+            <p class="font-subdark center-text">Logo and signature desighn</p>
           </div>
         </div>
       </a>
