--- a/UI.html
+++ b/UI.html
@@ -32,6 +32,19 @@
   <p class="title_scribe bottom-70">Delphine design User Interface products for App and Website.</p>
   <!--pic-banner-->
   <div id="pic-banner" class="col-md-4">
+    <img src="img/UI_anueicon.png" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="UI_icon_anue.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>Icons in Anue</h5>
+            <p class="font-subdark center-text">Icon design</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
     <img src="img/ui_app_socialmedia.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_socialmedia_app.html" class="captiondetails">
