--- a/UI_news.html
+++ b/UI_news.html
@@ -26,16 +26,13 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">News Channel of Website</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">The news channel website is redesigned and conforms to RWD, the optimized interface is convenient for users to read on mobile phones.</p>
+    <p class="title_scribe w-900 bottom-25">UI design for Web, RWD web design.</p>
     <p class="s_title bottom-25">News Page</p>
     <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic1.gif" alt="">
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic2.jpg" alt="">
-    <p class="s_title bottom-25">Toptopic News Page</p>
-    <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
-    <img class="img-fluid w-900 bottom-70" src="img/news_pic3.gif" alt="">
-    <img class="img-fluid w-900 bottom-25" src="img/news_pic4.jpg" alt="">
-    <img class="img-fluid w-900 bottom-25" src="img/news_pic5.jpg" alt="">
+    <img class="img-fluid w-900" src="img/anuenews1@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/anuenews2@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/anuenews3@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/anuenews4@2x.png" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
 
