--- a/UI_appdarkmode.html
+++ b/UI_appdarkmode.html
@@ -23,7 +23,8 @@
     <p class="title_scribe w-900 bottom-25">Considering for users can read in a variety of situations, I defined the darkmode guideline of the app.</p>
     <img class="img-fluid w-900 bottom-70" src="img/ui_darkmode_pic.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/darkmode_pic2.jpg" alt="">
-    <img class="img-fluid w-900 bottom-25" src="img/darkmode_pic3.jpg" alt="">
+    <img class="img-fluid w-900 bottom-70" src="img/darkmode_pic4.gif" alt="">
+    <img class="img-fluid bottom-25" src="img/darkmode_pic3.jpg" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
 
