--- a/UI_subscription.html
+++ b/UI_subscription.html
@@ -19,62 +19,20 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand" href="index.html">	<!--DELPHINE LAN | PORTFOLIO-->
-      <img src="img/D_logo.svg" width="50" height="50" alt=""/> </a>
-    <button class="hamburger hamburger--collapse" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item d_none">
-          <a class="nav-link" href="UI.html">UI/UX</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="visual.html">VISUAL</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="video.html">VIDEO</a>
-        </li>
-        <li class="nav-item d_none">
-          <a class="nav-link" href="index.html">ABOUT</a>
-        </li>
-        <div class="mobile_meanu">
-          <li>
-            <a class="nav-link" href="index.html">ABOUT</a>
-          </li>
-          <li>
-            <a class="nav-link" href="UI.html">UI/UX</a>
-          </li>
-          <li>
-            <a class="nav-link" href="visual.html">VISUAL</a>
-          </li>
-          <li>
-            <a class="nav-link" href="video.html">VIDEO</a>
-          </li>
-          <li class="icon_menu">
-            <a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a>
-            <a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a>
-            <a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
-        </div>
-      </ul>
-    </div>
-  </nav>
+<!-- Common header-->
+<script src="js/header.js"></script>
+<!-- Common header end-->
 
 <div id="webdesign" class="container">
     <h2 class="title top-25">Subscription of Member</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">UI/UX design for RWD Web.</p>
-    <img class="img-fluid w-100max bottom-70" src="img/Subscription_pic1.png" alt="">
-    <p class="s_title bottom-25">Subscription Service of Member Center</p>
-    <img class="img-fluid w-900 bottom-70" src="img/Subscription_pic2.png" alt="">
-    <img class="img-fluid w-800 bottom-70" src="img/Subscription_pic3.png" alt="">
-    <img class="img-fluid w-800 bottom-70" src="img/Subscription_pic4.png" alt="">
-    <p class="s_title bottom-25">Subscription of News</p>
-    <img class="img-fluid w-900 bottom-70" src="img/Subscription_pic5.png" alt="">
-    <img class="img-fluid w-800 bottom-70" src="img/Subscription_pic6.png" alt="">
+    <p class="title_scribe w-900 bottom-25">UI design for RWD Web.</p>
+    <img class="img-fluid w-900" src="img/subscription1@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/subscription2@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/subscription3@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/subscription4@2x.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/ui_web_membernews.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
 
 <!--page-->
