--- a/visual_Invesco.html
+++ b/visual_Invesco.html
@@ -30,14 +30,11 @@
         The entire event page is based on Van Gogh's The Starry Night.<br>
         I designed the key visual and used html and css to complete them.</p>
     <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
-    <img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">
-    <img class="img-fluid w-900 bottom-70" src="img/Invesco_pic5.png" alt="">
-    <p class="s_title bottom-25">Key Visual : Van Gogh's The Starry Night. </p>
-    <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic2.png" alt="">
-    <p class="s_title bottom-25">color use</p>
-    <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic3.png" alt="">
-    <p class="s_title bottom-25">text color use</p>
-    <img class="img-fluid w-600 bottom-70" src="img/Invesco_pic4.png" alt="">
+    <img class="img-fluid w-900" src="img/invesco1@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/invesco2@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/invesco32x.png" alt="">
+    <img class="img-fluid w-900" src="img/invesco4@2x.png" alt="">
+    <!--<img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">-->
     <p>Copyright © Invesco</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
