--- a/visual_Invesco.html
+++ b/visual_Invesco.html
@@ -32,7 +32,7 @@
     <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
     <img class="img-fluid w-900" src="img/invesco1@2x.png" alt="">
     <img class="img-fluid w-900" src="img/invesco2@2x.png" alt="">
-    <img class="img-fluid w-900" src="img/invesco32x.png" alt="">
+    <img class="img-fluid w-900" src="img/invesco3@2x.png" alt="">
     <img class="img-fluid w-900" src="img/invesco4@2x.png" alt="">
     <!--<img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">-->
     <p>Copyright © Invesco</p>
