--- a/visual.html
+++ b/visual.html
@@ -49,6 +49,19 @@
     </div>
   </div>
   <div id="pic-banner" class="col-md-4">
+    <img src="img/Visual_cheers.jpg" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="visual_cheers.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>Anue X Cheers</h5>
+            <p class="font-subdark center-text">Campaign Page</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
     <img src="img/visual_Delphine.png" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="visual_Delphine.html" class="captiondetails">
