--- a/visual_cheers.html
+++ b/visual_cheers.html
@@ -24,20 +24,19 @@
 <!-- Common header end-->
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">Delphine</h2>
+    <h2 class="title top-25">Anue X Cheers</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">Logo and signature desighn.</p>
-    <img class="img-fluid w-900 bottom-25" src="img/Delphine1@2x.png" alt="">
-    <p class="title_scribe w-800 bottom-25" style="text-align: left;">My English name is Delphine. I took this name because I like dolphins very much. This name is derived from French and sounds similar to Dolphin. It is also said that it comes from dolphins.
-
-        <br>I designed this logo because I wanted to have my own signature. My original idea is to combine Delphine and dolphin, so I merged the letter D into a dolphin element.</p>
-    <img class="img-fluid w-900 bottom-70" src="img/Delphine2@2x.png" alt="">
+    <p class="title_scribe w-900 bottom-25">RWD Campaign Gage<br>
+        I designed the key visual and used html and css to complete them.</p>
+    <a class="bottom-25" href="https://campaign.cnyes.com/topics/anuexcheersmagazine/?utm_source=fbfan&utm_medium=news" target="blank">link to web →</a>
+    <img class="img-fluid w-900" src="img/cheers@2x.png" alt="">
+    <p>Copyright © anue</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="visual_cheers.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="visual_iroo.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow left font-darkgray" href="visual_Invesco.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow right font-darkgray" href="visual_Delphine.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
