--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -28,7 +28,9 @@
     <hr>
     <p class="title_scribe w-900 bottom-25">UI design for App.</p>
     <img class="img-fluid w-900 bottom-25" src="img/mp_app1@2x.png" alt="">
-    <p class="title_scribe w-900 bottom-25">「鉅亨號」為《Anue鉅亨網》基於 AI 大數據挖掘和推薦引擎所推出具影響力的自媒體社群平台，以投資理財為主題拓展到金融財經、房地產、汽車、數位虛擬貨幣、影音視頻及Podcast的數位生活圈。讀者可以透過一面牆及個人化功能關注一天的大小事；對創作者而言更是一個結合業界獨家編輯器、多媒體功能與1,000萬用戶的舞台。</p>
+    <p class="title_scribe w-900 bottom-25">這一項專案是以理財為主的的自媒體社群平台，讀者可以透過一面牆及個人化功能關注一天的大小事；對創作者而言更是一個結合業界獨家編輯器、多媒體功能。我主要的工作是UI介面設計及前期與PM討論storyboard和功能設定，
+        並且規劃互動流程。整個內容含了動態牆、貼文互動機制、文章編輯器、賞金制度...等等。進入開發前與工程師溝功能可行性與否。</p>
+    <p class="title_scribe w-900 bottom-25">這一項專案是以理財為主的的自媒體社群平台，讀者可以透過一面牆及個人化功能關注一天的大小事；對創作者而言更是一個結合業界獨家編輯器、多媒體功能。我主要的工作是UI介面設計及前期與PM討論storyboard和功能設定，並且規劃互動流程。整個內容含了動態牆、貼文互動機制、文章編輯器、賞金制度...等等。進入開發前與工程師溝功能可行性與否並作修正，/p>
     <img class="img-fluid w-900" src="img/mp_app3@2x.png" alt="">
     <img class="img-fluid w-900" src="img/mp_app4@2x.png" alt="">
     <img class="img-fluid w-900" src="img/mp_app5@2x.png" alt="">
