--- a/UI_news.html
+++ b/UI_news.html
@@ -31,6 +31,7 @@
     <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
     <img class="img-fluid w-900" src="img/anuenews1@2x.png" alt="">
     <img class="img-fluid w-900" src="img/anuenews2@2x.png" alt="">
+    <img class="img-fluid w-900" src="img/anuenews5@2x.png" alt="">
     <img class="img-fluid w-900" src="img/anuenews3@2x.png" alt="">
     <img class="img-fluid w-900" src="img/anuenews4@2x.png" alt="">
     <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
