--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <p class="bottom-5 font-gray">Internal Website and APP UI Design by sketch.<br> 
       Advertising Banner and Campaingn page production .<br> 
       ★ <b>Hao.cnyes</b> : This project is a social media platform
-      focusing on financial management. My work is cross-platform UI design including APP and RWD WEB and CMS
-      management system UI design.<br>
+      focusing on financial management. My work is cross-platform UI/UX design including APP and RWD WEB and CMS
+      management system.<br>
       ★ UI revised design of the news website.<br>
       ★ UI design of the company's B2B cooperation webpage and campaign page then complete all of this by html and css.<br>
     
