--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <p class="font-normal font-subdark">FASHION ADVERTISING CREATIONS INC.</p>
     <p class="bottom-5 font-gray">DM、POSTER Design based on the ability of photoshop and illustrator.<br>
       Producing vedio by After effects and premiere.<br>
-      ★ The exhibition poster association and booklet design of the TAITRA .<br>
+      ★ The exhibition booklet and bookcover design of the TAITRA.<br>
       ★ The exhibition newspaper of the TIS (Taipei IN Style Taipei Charm Show) .</p>
        
     <p class="font-normal font-subdark">▏2011-2012</p>
