--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
        
     <p class="font-normal font-subdark">▏2012-2014</p>
     <p class="font-bold font-subdark">Graphic Designer / Web Designer</p>
-    <p class="font-normal font-subdark">FASHION ADVERTISING CREATIONS INC.</p>
+    <p class="font-normal font-subdark">風尚國際廣告事業有限公司</p>
     <p class="bottom-5 font-gray">DM、POSTER Design based on the ability of photoshop and illustrator.<br>
       Producing vedio by After effects and premiere.<br>
       ★ The exhibition booklet and bookcover design of the TAITRA.<br>
