--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
     <h2 class="font-white"> PROFILE </h2>
     <h4 class="font-normal font-white">Dependable team worker</h4>
     <div class="col-md-9">
-      <p class="font-white bottom-25">I am working as a designer in the company. Even if I have never been exposed to work or software I have never stop learned and get myself into the situation quickly. I continue to improve the necessary skills in the workplace, and also like to collect relevant information.I also hope that will be more development in the future. I have a very positive attitude and full of ideals and ambitions for my work.</p>
+      <p class="font-white bottom-25">A girl who is good at communication and curious about new things. Likes to share and explore beautiful design!
+<br>
+ As a product UI designer and dependable team worker, I keep to improve the necessary skills and collect relevant information.  In the future, I am full of curious, accept different challenges. I have a positive attitude, full of ideals and ambitions for my work, and contribute my work experience.  Responsibly in every job!</p>
       <!--<p class="font-white">我目前職業為網頁設計師，即使是從未接觸過的工作或是未曾學習的軟體，我也能靠著不斷的學習與嘗試，使自己快速進入狀況，得以獲得更多新知，我不斷提升職場的必備技能，也喜歡蒐集相關的情報資訊。我喜愛學習與嘗鮮，對於未來期望能有不同的挑戰，也希望能有更多元的發展空間，我擁有非常積極的正面態度，對於工作充滿了理想與抱負。</p>-->
     </div>
   </div>
