--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
       <div class="col-md-4">
         <img src="img/skill_pic1.png" width="150" height="150">
         <h4>Web Design</h4>
-        <p class="font-subdark">RWD based on<br>HTML / CSS / bootstrap & JQuery應用</p>
+        <p class="font-subdark">Responsive Design / HTML / CSS / bootstrap & JQuery 應用</p>
       </div>
       <div class="col-md-4">
         <img src="img/skill_pic2.png" width="150" height="150">
         <h4>Graphic Design</h4>
-        <p class="font-subdark">Adobe Photoshop / Illustrator / In Design</p>
+        <p class="font-subdark">Adobe Photoshop / Illustrator / In Design / Typography</p>
       </div>
       <div class="col-md-4">
         <img src="img/skill_pic3.png" width="150" height="150">
         <h4>User Interface Design</h4>
-        <p class="font-subdark">Adobe XD / Sketch</p>
+        <p class="font-subdark">Adobe XD / Sketch / Wireframing / Prototyping</p>
       </div>
   </div>
 </div>
@@ -171,8 +171,13 @@
     <p class="font-normal font-subdark">▏2019 - now</p>
     <p class="font-bold font-subdark">UI Designer</p>
     <p class="font-normal font-subdark">Anue 鉅亨金融科技（鉅亨網）</p>
-    <p class="bottom-5 font-gray">Internal Website and APP UI Design by sketch.<br> 
-      Advertising Banner and Campaingn page production .<br> 
+    <p class="bottom-5 font-gray">Internal Website and APP UI Design.<br> 
+      ▪️User interface design and process planning 
+      ▪️Wireframe and prototype production 
+      ▪️Develop project guideline specifications 
+      ▪️Product experience design, visual design 
+      ▪️Product image component design 
+      ▪️Assist front-end to complete product realization
       ★ <b>Hao.cnyes</b> : This project is a social media platform
       focusing on financial management. My work is cross-platform UI/UX design including APP and RWD WEB and CMS
       management system.<br>
@@ -182,8 +187,7 @@
     <p class="font-normal font-subdark">▏2014 - 2019</p>
     <p class="font-bold font-subdark">Web Designer / Visual Designer</p>
     <p class="font-normal font-subdark">AMC 空中美語</p>
-    <p class="bottom-5 font-gray">Internal RWD Campaign Pages Design based on the ability
-      of html and css.<br>
+    <p class="bottom-5 font-gray">Internal Website and RWD Campaign Pages Design.<br>
       DM、POSTER Design based on the ability of photoshop
       and illustrator.<br>
       ★ <b>The company's official website</b> : UI design and complete by
@@ -199,10 +203,10 @@
       ★ The exhibition booklet and bookcover design of the TAITRA.<br>
       ★ The exhibition newspaper of the TIS (Taipei IN Style Taipei Charm Show) .</p>
        
-    <p class="font-normal font-subdark">▏2011-2012</p>
+    <!--<p class="font-normal font-subdark">▏2011-2012</p>
     <p class="font-bold font-subdark">Graphic Designer</p>
     <p class="font-normal font-subdark">偉氏國際有限公司</p>
-    <p class="bottom-5 font-gray">DM、POSTER Design based on the ability of photoshop and illustrator.</p>
+    <p class="bottom-5 font-gray">DM、POSTER Design based on the ability of photoshop and illustrator.</p>-->
 	  
 	<!--<p class="font-normal font-subdark">▏2010</p>
     <p class="font-bold font-subdark">3d animator</p>
@@ -226,8 +230,7 @@
     <div class="col-md-9">
       <p class="font-white bottom-25">A girl who is good at communication and curious about new things. Likes to share and explore beautiful design!
 <br>
- As a product UI designer and dependable team worker, I keep to improve the necessary skills and collect relevant information.  In the future, I am full of curious, accept different challenges. I have a positive attitude, full of ideals and ambitions for my work, and contribute my work experience.  Responsibly in every job!</p>
-      <!--<p class="font-white">我目前職業為網頁設計師，即使是從未接觸過的工作或是未曾學習的軟體，我也能靠著不斷的學習與嘗試，使自己快速進入狀況，得以獲得更多新知，我不斷提升職場的必備技能，也喜歡蒐集相關的情報資訊。我喜愛學習與嘗鮮，對於未來期望能有不同的挑戰，也希望能有更多元的發展空間，我擁有非常積極的正面態度，對於工作充滿了理想與抱負。</p>-->
+As a product UI designer and dependable team worker, I keep improving the necessary skills and collecting relevant information. In the future, I am curious, and will accept different challenges. I have a positive attitude, full of ideals and ambitions for my work, and contribute my work experience. Responsibly in every job!</p>
     </div>
   </div>
 </div>
