--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
     <p class="font-bold font-subdark">UI Designer</p>
     <p class="font-normal font-subdark">Anue 鉅亨金融科技（鉅亨網）</p>
     <p class="bottom-5 font-gray">Internal Website and APP UI Design.<br> 
-      ▪️User interface design and process planning 
-      ▪️Wireframe and prototype production 
-      ▪️Develop project guideline specifications 
-      ▪️Product experience design, visual design 
-      ▪️Product image component design 
-      ▪️Assist front-end to complete product realization
+      ▪️ User interface design and process planning 
+      ▪️ Wireframe and prototype production 
+      ▪️ Develop project guideline specifications 
+      ▪️ Product experience design, visual design 
+      ▪️ Product image component design 
+      ▪️ Assist front-end to complete product realization<br> 
       ★ <b>Hao.cnyes</b> : This project is a social media platform
       focusing on financial management. My work is cross-platform UI/UX design including APP and RWD WEB and CMS
       management system.<br>
