--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <!--<p>Web Designer</p>-->
 
     <h5>work experience</h5>
-    <p class="font-normal font-subdark">▏2019 - now</p>
+    <p class="font-normal font-subdark">▏2019 - Present</p>
     <p class="font-bold font-subdark">UI Designer</p>
     <p class="font-normal font-subdark">Anue 鉅亨金融科技（鉅亨網）</p>
     <p class="bottom-5 font-gray">Internal Website and APP UI Design.<br> 
