--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <h5>work experience</h5>
     <p class="font-normal font-subdark">▏2019 - Present</p>
-    <p class="font-bold font-subdark">UI Designer</p>
+    <p class="font-bold font-subdark">Senior Designer</p>
     <p class="font-normal font-subdark">Anue 鉅亨金融科技（鉅亨網）</p>
     <p class="bottom-5 font-gray">Internal Website and APP UI Design.<br> 
       ▪️ User interface design and process planning 
@@ -196,7 +196,7 @@
       by html and css, then cooperation with RD to connection the back- ground information.</p>
        
     <p class="font-normal font-subdark">▏2012-2014</p>
-    <p class="font-bold font-subdark">Graphic Designer / Web Designer</p>
+    <p class="font-bold font-subdark">Graphic Designer</p>
     <p class="font-normal font-subdark">風尚國際廣告事業有限公司</p>
     <p class="bottom-5 font-gray">DM、POSTER Design based on the ability of photoshop and illustrator.<br>
       Producing vedio by After effects and premiere.<br>
