--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="col-md-4">
         <img src="img/skill_pic3.png" width="150" height="150">
         <h4>User Interface Design</h4>
-        <p class="font-subdark">Adobe XD / Sketch / Wireframing / Prototyping</p>
+        <p class="font-subdark">Adobe XD / Sketch / Figma / Wireframing / Prototyping</p>
       </div>
   </div>
 </div>
