--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <p class="font-bold font-subdark">Graphic Designer</p>
     <p class="font-normal font-subdark">風尚國際廣告事業有限公司</p>
     <p class="bottom-5 font-gray">DM、POSTER Design based on the ability of photoshop and illustrator.<br>
-      Producing vedio by After effects and premiere.<br>
+      Producing video by After effects and premiere.<br>
       ★ The exhibition booklet and bookcover design of the TAITRA.<br>
       ★ The exhibition newspaper of the TIS (Taipei IN Style Taipei Charm Show) .</p>
        
