--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
   <div class="col-md-6 about_me">
     <h3>Delphine Lan </h3>
     <!--<p>Web Designer</p>-->
-    <p class="font-bold font-subdark">UI/UX design</p>
-    <p class="bottom-5 font-gray"> ▪️User interface design and process planning. 
-    ▪️Wireframe and prototype production. 
-    ▪️Develop project guideline specifications. 
-    ▪️Product experience design, visual design. 
-    ▪️Product image component design.
+    <p class="font-bold font-subdark">Design</p>
+    <p class="bottom-5 font-gray"> ▪️ User interface design and process planning 
+    ▪️ Wireframe and prototype production 
+    ▪️ Develop project guideline specifications 
+    ▪️ Product experience design, visual design 
+    ▪️ Product image component design
     
-    <p class="font-bold font-subdark">Cross-departmental cooperation.</p>
-    <p class="bottom-5 font-gray">▪️Communication with PM to discuss product pre-operation. 
-    ▪️Assist front-end engineers to complete product realization</p>
+    <p class="font-bold font-subdark">Cross-departmental cooperation</p>
+    <p class="bottom-5 font-gray">▪️ Communication with PM to discuss product pre-operation  
+    ▪️ Assist front-end engineers to complete product realization</p>
 
     <h5>work experience</h5>
     <p class="font-normal font-subdark">▏2019 - Present</p>
