--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <p class="font-normal font-subdark">Anue 鉅亨金融科技（鉅亨網）</p>
     <p class="bottom-5 font-gray">Internal Website and APP UI Design.<br> 
       ★ <b>Hao.cnyes</b> : This project is a social media platform
-      focusing on financial management. My work is cross-platform UI/UX design including APP and RWD WEB and CMS system. Discussing storyboard and planning functions with PM, product ideas, market research, wireframe planning and visual design.<br>
+      focusing on financial management. My work is cross-platform UI/UX design including APP and RWD web and CMS system. Discussing storyboard and planning functions with PM, product ideas, market research, wireframe planning and visual design.<br>
       ★ UI revised design of the news website.<br>
       ★ UI design of the company's B2B cooperation webpage and campaign page then complete all of this by html and css.<br>
     
