--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
     <p class="font-normal font-subdark">Anue 鉅亨金融科技（鉅亨網）</p>
     <p class="bottom-5 font-gray">Internal Website and APP UI Design.<br> 
       ★ <b>Hao.cnyes</b> : This project is a social media platform
-      focusing on financial management. My work is cross-platform UI/UX design including APP and RWD web and CMS system. Discussing storyboard and planning functions with PM, product ideas, market research, wireframe planning and visual design.<br>
+      focusing on financial management. My work is cross-platform UI / UX design including APP and RWD web and CMS system. Discussing storyboard and planning functions with PM, product ideas, market research, wireframe planning and visual design.<br>
       ★ UI revised design of the news website.<br>
-      ★ UI design of the company's B2B cooperation webpage and campaign page then complete all of this by html and css.<br>
+      ★ Design the company's B2B cooperation webpage and campaign page then complete all of this by html and css.<br>
     
     <p class="font-normal font-subdark">▏2014 - 2019</p>
     <p class="font-bold font-subdark">Web Designer / Visual Designer</p>
@@ -195,7 +195,7 @@
       and illustrator.<br>
       ★ <b>The company's official website</b> : UI design and complete by
       html and css.<br>
-      ★ <b>The course selection system</b> : UI designed and complete
+      ★ <b>The course selection system</b> : UI design and complete
       by html and css, then cooperation with RD to connection the back- ground information.</p>
        
     <p class="font-normal font-subdark">▏2012-2014</p>
