--- a/UI.html
+++ b/UI.html
@@ -31,7 +31,7 @@
   <hr>
   <p class="title_scribe bottom-70">Delphine design User Interface products for App and Website.</p>
   <!--pic-banner-->
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/UI_anueicon.png" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_icon_anue.html" class="captiondetails">
@@ -43,7 +43,7 @@
         </div>
       </a>
     </div>
-  </div>
+  </div>-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/ui_app_socialmedia.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
@@ -122,7 +122,7 @@
       </a>
     </div>
   </div>
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/ui_darkmode_pic.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_appdarkmode.html" class="captiondetails">
@@ -134,7 +134,7 @@
         </div>
       </a>
     </div>
-  </div>
+  </div>-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/ui_web_lesson.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
